<resources>
    <string name="app_name">Twitter</string>
    <string name="sign_in">Sign In</string>
    <string name="textview">TextView</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="save">SAVE</string>
    <string name="here_text_will_be_saved">Here Text Will be Saved</string>
    <string name="apply">Apply</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_then">Already have an account?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
</resources>